# packages/api/src/features/admin-organization/data-access/admin-organization-list-discord-guilds-input-schema.ts
@@ -1,0 +1,5 @@
+import z from 'zod'
+
+export const adminOrganizationListDiscordGuildsInputSchema = z.object({
+  organizationId: z.string().min(1),
+})
